--- a/src/Homepage/Homepage.css
+++ b/src/Homepage/Homepage.css
@@ -1,5 +1,5 @@
 #homepage-header {
-	background-image: url('https://proguitarparts.com/wp-content/uploads/2019/10/black-and-white-box-guitar-grain-63694.jpg');
+	background-image: url('https://i.postimg.cc/CKJhW5c0/homepage-header-background.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
