--- a/src/Products/Products.css
+++ b/src/Products/Products.css
@@ -12,9 +12,33 @@
 	margin-top: 12%;
 	color: white;
 	background-color: rgba(0,0,0,.7);
+	width: 100%;
 }
 
 .products-img {
 	max-width: 225px;
 	max-height: 225px;
+}
+
+#products-header-text > h1 {
+	font-size: 2.5rem !important;
+}
+
+@media (min-width : 992px) {
+	#products-header-text {
+		width: 60% !important;
+	}
+}
+
+@media (min-width : 768px) and (max-width : 991px) {
+	#products-header-text {
+		width: 85%;
+	}
+}
+
+@media (min-width : 576px) {
+
+	#products-header-text > h1 {
+		font-size: 4.5rem !important;
+	}
 }
